Less colour variables altered
customised navigation headers colours  using the variables less file

--- a/_/css/mystyles.css
+++ b/_/css/mystyles.css
@@ -75,3 +75,16 @@ ul > li > a  {
 	color:#666;
 	font-size:80%;
 }
+
+/*.navbar-default {
+    background-color: #ff8e61;
+    border-color: #ff763f;
+    }
+
+		    .navbar {
+    position: relative;
+    min-height: 35px;
+    margin-bottom: 22px;
+    border: 1px solid transparent;
+    }
+*/
